--- a/app/templates/main.less
+++ b/app/templates/main.less
@@ -1,4 +1,4 @@
-<% if (includeBootstrap) { %>@import "../node_modules/bootstrap-less/bootstrap.less"; <% } %>
+<% if (includeBootstrap) { %>@import "../../node_modules/bootstrap-less/bootstrap.less"; <% } %>
 @color0: #e5e5e5;
 @color1: #000000;
 @color2: #cccccc;
@@ -65,17 +65,7 @@ body {
 		padding: 14px 24px;
 	}
 }
-@media {
-	screen {
-		and {
-			(min-width {
-				&:768px) {
-					.container { max-width: 730px;
-				}
-			}
-		}
-	}
-}
+
 .hero-unit {
 	background-color: #eeeeee;
 	border-radius: 6px;
@@ -90,3 +80,4 @@ body {
 		letter-spacing: -1px;
 		line-height: 1;
 	}
+}
